make a lot of changes

--- a/index3.html
+++ b/index3.html
@@ -1,91 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ini codstud 3</title>
-</head>
-<body>
+  </head>
+  <body>
     <table border="1" cellspacing="0" cellpadding="5">
-        <thead>
-            <tr>
-                    <th>Nama</th>
-                    <th>Email</th>
-                    <th>No Hp</th>
-                    <th>Tempat Lahir</th>
-                    <th>Face</th>
-            </tr>
-        </thead>
+      <thead>
+        <tr>
+          <th>Nama</th>
+          <th>Email</th>
+          <th>No Hp</th>
+          <th>Tempat Lahir</th>
+          <th>Face</th>
+        </tr>
+      </thead>
 
-        <tbody>
-            <tr>
-                <td>Courtois</td>
-                <td>Tibokortoa@gmail.com</td>
-                <td>089243123341</td>
-                <td>Belgia</td>
-                <td><img src="../Asset/COURTOIS.png" width="50px" alt="Ini Courtois"></td>
-            </tr>
-            <tr>
-                <td>Casemiro</td>
-                <td>Caseesprot@gmail.com</td>
-                <td>089243123340</td>
-                <td>Brazil</td>
-                <td><img src="../Asset/CASEMIRO.png" width="50px" alt="Ini Casemiro"></td>
-            </tr>
-            <tr>
-                <td>Kroos</td>
-                <td>Kroosacademy@gmail.com</td>
-                <td>089243123348</td>
-                <td>Germany</td>
-                <td><img src="../Asset/KROOS.png" width="50px" alt="Ini Kroos"></td>
-            </tr>
-            <tr>
-                <td>Benzema</td>
-                <td>Hajikarim@gmail.com</td>
-                <td>089243123349</td>
-                <td>France</td>
-                <td><img src="../Asset/BENZEMA.png" width="50px" alt="Ini Benzema"></td>
-            </tr>
-            <tr>
-                <td>Alaba</td>
-                <td>Davidalaba@gmail.com</td>
-                <td>089243123344</td>
-                <td>Austria</td>
-                <td><img src="../Asset/ALABA.png" width="50px" alt="Ini Alaba"></td>
-            </tr>
-        </tbody>
+      <tbody>
+        <tr>
+          <td>Courtois</td>
+          <td>Tibokortoa@gmail.com</td>
+          <td>089243123341</td>
+          <td>Belgia</td>
+          <td><img src="Asset/COURTOIS.png" width="50px" alt="Ini Courtois" /></td>
+        </tr>
+        <tr>
+          <td>Casemiro</td>
+          <td>Caseesprot@gmail.com</td>
+          <td>089243123340</td>
+          <td>Brazil</td>
+          <td><img src="Asset/CASEMIRO.png" width="50px" alt="Ini Casemiro" /></td>
+        </tr>
+        <tr>
+          <td>Kroos</td>
+          <td>Kroosacademy@gmail.com</td>
+          <td>089243123348</td>
+          <td>Germany</td>
+          <td><img src="Asset/KROOS.png" width="50px" alt="Ini Kroos" /></td>
+        </tr>
+        <tr>
+          <td>Benzema</td>
+          <td>Hajikarim@gmail.com</td>
+          <td>089243123349</td>
+          <td>France</td>
+          <td><img src="Asset/BENZEMA.png" width="50px" alt="Ini Benzema" /></td>
+        </tr>
+        <tr>
+          <td>Alaba</td>
+          <td>Davidalaba@gmail.com</td>
+          <td>089243123344</td>
+          <td>Austria</td>
+          <td><img src="Asset/ALABA.png" width="50px" alt="Ini Alaba" /></td>
+        </tr>
+      </tbody>
     </table>
-    <hr>
-    <br><br>
-        <form action="">
-            <label for="emailInput">Email</label>
-                <input type="email" id="emailInput">
-            <label for="passwordInput">Kata sandi</label>
-                <input type="password" id="passwordInput"> <br>
-            <label for="genderInput">Jenis kelamin: </label> <br>
-                <input type="radio">pria
-                <input type="radio">wanita <br>
-            <label for="birthday">Tanggal lahir: </label>
-                <input type="date" id="birthday">
-        <br><br>
-            <select>
-                <option value="">Konten A</option>
-                <option value="">Konten B</option>
-            </select>
-             <button>Login</button>
-        </form>
-        <iframe width="400" height="250" src="https://www.youtube.com/embed/g55eoClwqb4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15866.815658278267!2d106.81547168084278!3d-6.170385928873308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f51beef3a83d%3A0xf33dc651dadbb47d!2sIstana%20Merdeka!5e0!3m2!1sid!2sid!4v1660925063931!5m2!1sid!2sid" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <video controls width="250">
+    <hr />
+    <br /><br />
+    <form action="">
+      <label for="emailInput">Email</label>
+      <input type="email" id="emailInput" />
+      <label for="passwordInput">Kata sandi</label>
+      <input type="password" id="passwordInput" /> <br />
+      <label for="genderInput">Jenis kelamin: </label> <br />
+      <input type="radio" />pria <input type="radio" />wanita <br />
+      <label for="birthday">Tanggal lahir: </label>
+      <input type="date" id="birthday" />
+      <br /><br />
+      <select>
+        <option value="">Konten A</option>
+        <option value="">Konten B</option>
+      </select>
+      <button>Login</button>
+    </form>
+    <iframe
+      width="400"
+      height="250"
+      src="https://www.youtube.com/embed/g55eoClwqb4"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15866.815658278267!2d106.81547168084278!3d-6.170385928873308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f51beef3a83d%3A0xf33dc651dadbb47d!2sIstana%20Merdeka!5e0!3m2!1sid!2sid!4v1660925063931!5m2!1sid!2sid"
+      width="300"
+      height="150"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+    <video controls width="250">
+      <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm" type="video/webm" />
 
-            <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm"
-                    type="video/webm">
-        
-            <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4"
-                    type="video/mp4">
-        
-            Sorry, your browser doesn't support embedded videos.
-        </video>
-</body>
+      <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
+
+      Sorry, your browser doesn't support embedded videos.
+    </video>
+  </body>
 </html>
