--- a/portofolio.html
+++ b/portofolio.html
@@ -4,34 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website Portofolio dari Coding Studio</title>
-    <link rel="stylesheet" href="../css/gaya.css" />
+    <link rel="stylesheet" href="css/gaya.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@300;500;700&display=swap" rel="stylesheet" />
-    <link rel="icon" href="../Asset/icons8-walter-white-32.png" type="icon" />
+    <link rel="icon" href="Asset/icons8-walter-white-32.png" type="icon" />
   </head>
   <body>
     <div id="landing-page">
       <h1 class="welcome-text">Halo selamat datang di website saya</h1>
     </div>
     <ul class="nav">
-      <li class="nav-icon desktop"><img src="../Asset/codingsatu.png" alt="iconAvatar.svg" /></li>
+      <li class="nav-icon desktop"><img src="Asset/codingsatu.png" alt="iconAvatar.svg" /></li>
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#portofolio">My Portfolio</a></li>
       <li><a href="#contact-us">Contact Me</a></li>
     </ul>
     <div id="about-me">
       <div class="section-introduction">
-        <img src="../Asset/fotoku.jpg" alt="iconAvatar.svg" class="img-iconsatu" />
+        <img src="Asset/fotoku.jpg" alt="iconAvatar.svg" class="img-iconsatu" />
         <p class="content-perkenalan">Perkenalkan saya Danni Adhyatma Rachman, seorang Web developer yang berfokus dalam membuat tampilan website yang modern dan responsive</p>
       </div>
       <div class="section-education">
-        <img src="../Asset/webdevsatu.jpg" alt="iconAvatar.svg" class="img-icondua" />
+        <img src="Asset/webdevsatu.jpg" alt="iconAvatar.svg" class="img-icondua" />
         <p class="content-perkenalan">Saya telah mengikuti beberapa kelas khusus untuk membuat tampilan web responsive dan telah mempunyai beberapa sertifikat</p>
       </div>
       <div class="section-working">
-        <img src="../Asset/webdevdua.jpg" alt="iconAvatar.svg" class="img-icontiga" />
-        <p class="content-perkenalan">
-          Saya telah mengusasi cara membuat tampilan website dengan menggunakna <b>HTML, CSS dan JavaScript</b> saya juga dapat menggunakan Framework modern seperti <b>Bootstrap</b>
-        </p>
+        <img src="Asset/webdevdua.jpg" alt="iconAvatar.svg" class="img-icontiga" />
+        <p class="content-perkenalan">Saya telah mengusasi cara membuat tampilan website dengan menggunakna <b>HTML, CSS dan JavaScript</b> saya juga dapat menggunakan Framework modern seperti <b>Bootstrap</b></p>
       </div>
     </div>
     <div id="portofolio">
@@ -66,19 +64,19 @@
         <div class="containernya">
           <div>
             <a href="tel:123-456-7890" class="contact-icon-bundler">
-              <img src="../Asset/phone.png" alt="phone.png" class="contact-icon" />
+              <img src="Asset/phone.png" alt="phone.png" class="contact-icon" />
               <span class="contact-desktop">1234567890</span>
             </a>
           </div>
           <div>
             <a href="mailto:someone@example.com" class="contact-icon-bundler">
-              <img src="../Asset/email.png" alt="mail.png" class="contact-icon" />
+              <img src="Asset/email.png" alt="mail.png" class="contact-icon" />
               <span class="contact-desktop">dannirachman2@gmail.com</span>
             </a>
           </div>
           <div>
             <a href="https://www.linkedin.com/in/williamhgates" class="contact-icon-bundler">
-              <img src="../Asset/linkedin.png" alt="in.png" class="contact-icon" />
+              <img src="Asset/linkedin.png" alt="in.png" class="contact-icon" />
               <span class="contact-desktop">danniadhyatmarachman</span>
             </a>
           </div>
