--- a/tugas1.html
+++ b/tugas1.html
@@ -8,7 +8,7 @@
     <style>
       @font-face {
         font-family: 'FontBebek';
-        src: url('../Silkscreen/Silkscreen-Bold.ttf');
+        src: url('Silkscreen/Silkscreen-Bold.ttf');
       }
       .span {
         font-family: 'FontBebek';
@@ -59,14 +59,14 @@
   <body>
     <span class="span">Netflix, Zoom dan OTT Asing Lainnya Akan Mulai Bayar Pajak di Indonesia</span>
     <p>
-      Pemerintah melalui kebijakan yang dikeluarkan Kementerian Keuangan, akan memberlakukan pungutan pajak atas penggunaan sejumlah layanan digital over-the-top (OTT) luar negeri yang memiliki basis
-      pengguna signifikan di Indonesia. Layanan video on-demand seperti Netflix, atau streaming musik Spotify hingga aplikasi video conference Zoom akan menerima pemberlakuan pungutan pajak tersebut.
-      Keputusan ini diambil Pemerintah sebagai upaya mitigasi dampak negatif pandemi COVID-19 terhadap kestabilan perekonomian negara.
+      Pemerintah melalui kebijakan yang dikeluarkan Kementerian Keuangan, akan memberlakukan pungutan pajak atas penggunaan sejumlah layanan digital over-the-top (OTT) luar negeri yang memiliki basis pengguna signifikan di Indonesia.
+      Layanan video on-demand seperti Netflix, atau streaming musik Spotify hingga aplikasi video conference Zoom akan menerima pemberlakuan pungutan pajak tersebut. Keputusan ini diambil Pemerintah sebagai upaya mitigasi dampak negatif
+      pandemi COVID-19 terhadap kestabilan perekonomian negara.
     </p>
     <p>
-      Menurut keterangan resmi Direktorat Jenderal Pajak, penambahan PPN atas produk digital dari luar negeri ini merupakan upaya pemerintah menciptakan kesetaraan bagi seluruh pelaku usaha. Khususnya
-      antara pelaku bisnis lokal dengan asing. Pemerintah Indonesia memang sedang serius menghadapi kondisi darurat dan memulihkan ekonomi nasional. Pemberlakuan perpajakan jadi salah satu poin dalam
-      Perpu Presiden terkait Kebijakan Keuangan Negara dan Stabilitas Sistem Keuangan untuk Penanganan Pandemi Corona Virus Disease.
+      Menurut keterangan resmi Direktorat Jenderal Pajak, penambahan PPN atas produk digital dari luar negeri ini merupakan upaya pemerintah menciptakan kesetaraan bagi seluruh pelaku usaha. Khususnya antara pelaku bisnis lokal dengan
+      asing. Pemerintah Indonesia memang sedang serius menghadapi kondisi darurat dan memulihkan ekonomi nasional. Pemberlakuan perpajakan jadi salah satu poin dalam Perpu Presiden terkait Kebijakan Keuangan Negara dan Stabilitas Sistem
+      Keuangan untuk Penanganan Pandemi Corona Virus Disease.
     </p>
 
     <!-- <iframe width="350" height="315" src="https://www.youtube.com/embed/RBumgq5yVrA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
@@ -76,11 +76,12 @@
       class="YOUTUBE-iframe-video"
       width="560"
       height="315"
-      src="https://www.youtube.com/embed/2Vv-BfVoq4g"
+      src="https://www.youtube.com/embed/q-w5iqNqC7k?si=Gg-3b46OpLREyXv9"
       title="YouTube video player"
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
+      allowfullscreen
+    ></iframe>
     <br />
     <table border="1" cellspacing="2" cellpadding="8">
       <thead>
@@ -107,7 +108,7 @@
     <br />
     <a href="tugas2.html" target="_self" style="text-decoration: none" class="redcolor" id="Ini-selanjutnya">Klik disini untuk baca lebih lanjut</a>
     <hr />
-    <button><a href="../Asset/ALABA.png" style="text-decoration: none" download>Ini alabanya adick-adick</a></button>
+    <button><a href="Asset/ALABA.png" style="text-decoration: none" download>Ini alabanya adick-adick</a></button>
     <footer>© Danni Adhyatma Rachman, Inc. All right reseved</footer>
   </body>
 </html>
