--- a/tugas2.html
+++ b/tugas2.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codstud 4 Inputan</title>
     <style>
-     .kroos{
-        transform: translate(500px,20px);
-     }
+      .kroos {
+        transform: translate(500px, 20px);
+      }
 
-      #usernameInput:focus{
-        background: #7FFF00;
+      #usernameInput:focus {
+        background: #7fff00;
         color: red;
       }
-      #passwordInput:focus{
-        background: #7FFF00;
+      #passwordInput:focus {
+        background: #7fff00;
         color: red;
       }
-      div{
-        transform: translate(480px,20px);
+      div {
+        transform: translate(480px, 20px);
         background: yellow;
         border: solid 3px green;
         width: 520px;
         height: 150px;
       }
-      a{
+      a {
         position: absolute;
         left: 556px;
         top: 460px;
       }
     </style>
-</head>
+  </head>
 
-<body>
-    <img class="kroos" src="../Asset/KROOS.png" alt="Ini Toni Kroos" width="450px" height="330px">
-    <br>
+  <body>
+    <img class="kroos" src="Asset/KROOS.png" alt="Ini Toni Kroos" width="450px" height="330px" />
+    <br />
 
     <div>
-        <h2>Login Form</h2>
-        <form action="tugas1.html">
-            <label for="usernameInput">username</label>
-                <input type="text" id="usernameInput">
-            <label for="passwordInput">password</label>
-                <input type="password" id="passwordInput">
-        </form>
+      <h2>Login Form</h2>
+      <form action="tugas1.html">
+        <label for="usernameInput">username</label>
+        <input type="text" id="usernameInput" />
+        <label for="passwordInput">password</label>
+        <input type="password" id="passwordInput" />
+      </form>
     </div>
     <a href="tugas1.html"><button>Login</button></a>
-
-</body>
+  </body>
 </html>
