--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </dl>
     <hr />
     <h3>Winger Madrid</h3>
-    <img src="../Asset/VALVERDE.png" alt="Ini Gambar Federico" width="100px" />
+    <img src="Asset/VALVERDE.png" alt="Ini Gambar Federico" width="100px" />
     <br />
     <a href="index2.html" target="_blank">Federico Valverde</a>
   </body>
